fix double scrollbar

--- a/static/main.css
+++ b/static/main.css
@@ -5,7 +5,6 @@ html, body {
 
 html {
   overflow-x: hidden;
-  overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
 
